# template

./: .gitignore  .pre-commit-config.yaml  README.MD  makefile  pyproject.toml
skillx_core/: Dockerfile  makefile  package.json
skillx_core/digital_assets/: apps.py  urls.py  views.py
skillx_core/skillx/: settings.py  urls.py
skillx_core/src/app/: globals.css  page.tsx
skillx_ui/: package-lock.json  package.json
skillx_ui/src/app/: globals.css  layout.tsx  page.tsx
